sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:32: error: n is already defined as value n
  val n = getNombreValeurs()
      ^AlgBubbleSort2:34: error: swap is already defined as variable swap
  var swap = false
      ^