sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  val n = getNombreValeurs()
  var c = 0
  var swap = false
  do {
    swap = false
    for (i <- 0 to (n-2-c)) {
    	if (plusPetit(i+1,i)) {
     		echange(i,i+1);
     		swap = true
      }
    }
    c = c + 1
  } while (swap)
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  val n = getNombreValeurs()
  var m = n
  var swap = false
  do {
    swap = false
    for (i <- 0 to (m-2)) {
    	if (plusPetit(i+1,i)) {
     		echange(i,i+1);
     		swap = true
      }
    }
    m = m - 1
  } while (swap)
}